[Enhancement #51] Extend metamodel with RDFCollectionAttribute.